# Projet-2-Requ-tez-des-services-IA

./: .env.default  .gitignore  notebook_122025.ipynb  pyproject.toml
